--- a/KinhThanhCongGiao/KinhThanhCongGiao.Api/Properties/launchSettings.json
+++ b/KinhThanhCongGiao/KinhThanhCongGiao.Api/Properties/launchSettings.json
@@ -4,17 +4,17 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:10060",
-      "sslPort": 44313
+      "applicationUrl": "http://localhost:36409",
+      "sslPort": 44354
     }
   },
   "profiles": {
-    "KinhThanhCongGiaoApi": {
+    "KinhThanhCongGiao.Api": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7042;http://localhost:5042",
+      "applicationUrl": "https://localhost:7164;http://localhost:5164",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
