--- a/KinhThanhCongGiao/KinhThanhCongGiao.Api/.github/workflows/ci-cd.yml
+++ b/KinhThanhCongGiao/KinhThanhCongGiao.Api/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: ci-cd
+﻿name: ci-cd
 
 on:
   push:
@@ -14,7 +14,7 @@ jobs:
       - name: Set up .NET 6
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: "6.0.x"
+            dotnet-version: "6.0.x"
         
       - name: Restore Dependencies
         run: dotnet restore
