--- a/KinhThanhCongGiao/.github/workflows/ci-cd.yml
+++ b/KinhThanhCongGiao/.github/workflows/ci-cd.yml
@@ -1,8 +1,9 @@
-name: ci-cd
+﻿name: ci-cd
 
 on:
   push:
-    branches: master
+    branches: 
+      - master
 
 jobs:
   build:
@@ -14,10 +15,14 @@ jobs:
       - name: Set up .NET 6
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: "6.0.x"
+            dotnet-version: "6.0.x"
         
       - name: Restore Dependencies
         run: dotnet restore
+        working-directory: KinhThanhCongGiao/KinhThanhCongGiao.Api
       
       - name: Build app 
-        run: dotnet build  -c Release --no-restore
+        run: dotnet build --configuration -c Release --no-restore
+      
+      - name: Test
+        run: dotnet test --no-restore --verbosity normal
