--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
         working-directory: KinhThanhCongGiao/KinhThanhCongGiao.Api
       
       - name: Build app 
-        run: dotnet build --configuration -c Release --no-restore
+        run: dotnet build -c Release --no-restore
       
       - name: Test
         run: dotnet test --no-restore --verbosity normal
